Fixing icon error on smaller screens

--- a/css/default.css
+++ b/css/default.css
@@ -165,7 +165,6 @@ body .modal {
   width: auto;
   margin: 30px;
   left: 0;
-  height: 100px;
 }
 
 
